refactor(coding-agent): simplify project context loading
- align prompt rendering and candidate fallback with pi behavior
- reduce loader limits while preserving reload lifecycle guarantees
- update regression coverage and project context documentation