@@ -1,17 +1,19 @@
 package site.pplee.jcode.codingagent.context;
 
+import org.junit.jupiter.api.Assumptions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import site.pplee.jcode.agentcore.concurrent.CancellationSource;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
+import java.nio.charset.CharacterCodingException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -30,7 +32,7 @@ class ProjectContextLoaderTest {
     }
 
     @Test
-    void ordersGlobalAndPhysicalAncestorsAndSelectsHighestPriorityCandidate() throws Exception {
+    void ordersGlobalAndConfiguredPathAncestorsAndSelectsHighestPriorityCandidate() throws Exception {
         var global = Files.createDirectory(directory.resolve("global"));
         var project = Files.createDirectory(directory.resolve("project"));
         var module = Files.createDirectory(project.resolve("module"));
@@ -44,8 +46,7 @@ class ProjectContextLoaderTest {
                 ProjectContextFailureMode.WARN_AND_SKIP);
         var snapshot = load(module, config, 1);
 
-        assertEquals(List.of("global", "outer", "override"),
-                snapshot.files().stream().map(ProjectContextFile::content).toList());
+        assertEquals(List.of("global", "outer", "override"), contents(snapshot));
         assertEquals(List.of(ProjectContextScope.GLOBAL, ProjectContextScope.PROJECT,
                         ProjectContextScope.PROJECT),
                 snapshot.files().stream().map(ProjectContextFile::scope).toList());
@@ -53,39 +54,63 @@ class ProjectContextLoaderTest {
     }
 
     @Test
-    void skipsNonRegularCandidateButDoesNotFallbackAfterSelectedFileFailure() throws Exception {
-        Files.createDirectory(directory.resolve("AGENTS.override.md"));
+    void fallsBackAfterHigherPriorityCandidateCannotBeRead() throws Exception {
+        Files.write(directory.resolve("AGENTS.override.md"), new byte[]{(byte) 0xc3, 0x28});
         Files.writeString(directory.resolve("AGENTS.md"), "fallback");
+
         var warning = load(directory, new ProjectContextConfig(true, null, directory,
                 ProjectContextFailureMode.WARN_AND_SKIP), 1);
-        assertEquals(List.of("fallback"), warning.files().stream().map(ProjectContextFile::content).toList());
-        assertTrue(hasCode(warning, ProjectContextDiagnostic.Code.NOT_REGULAR_FILE));
+        var strict = load(directory, new ProjectContextConfig(true, null, directory,
+                ProjectContextFailureMode.FAIL), 2);
 
-        Files.delete(directory.resolve("AGENTS.override.md"));
-        Files.write(directory.resolve("AGENTS.override.md"), new byte[]{(byte) 0xc3, 0x28});
-        var invalid = load(directory, new ProjectContextConfig(true, null, directory,
-                ProjectContextFailureMode.WARN_AND_SKIP), 2);
-        assertTrue(invalid.files().isEmpty());
-        assertTrue(hasCode(invalid, ProjectContextDiagnostic.Code.INVALID_UTF8));
-
-        assertThrows(ProjectContextLoadException.class, () -> load(directory,
-                new ProjectContextConfig(true, null, directory, ProjectContextFailureMode.FAIL), 3));
+        assertEquals(List.of("fallback"), contents(warning));
+        assertEquals(List.of("fallback"), contents(strict));
+        assertTrue(hasCode(warning, ProjectContextDiagnostic.Code.INVALID_UTF8));
+        assertTrue(hasCode(strict, ProjectContextDiagnostic.Code.INVALID_UTF8));
     }
 
     @Test
-    void danglingHighPrioritySymlinkDoesNotFallback() throws Exception {
+    void fallsBackAfterNonRegularOrDanglingOverride() throws Exception {
+        Files.createDirectory(directory.resolve("AGENTS.override.md"));
+        Files.writeString(directory.resolve("AGENTS.md"), "fallback");
+        var nonRegular = load(directory, new ProjectContextConfig(true, null, directory,
+                ProjectContextFailureMode.FAIL), 1);
+        assertEquals(List.of("fallback"), contents(nonRegular));
+        assertTrue(hasCode(nonRegular, ProjectContextDiagnostic.Code.NOT_REGULAR_FILE));
+
+        Files.delete(directory.resolve("AGENTS.override.md"));
         try {
             Files.createSymbolicLink(directory.resolve("AGENTS.override.md"), directory.resolve("missing"));
-        } catch (UnsupportedOperationException e) {
-            return;
+        } catch (UnsupportedOperationException | IOException e) {
+            Assumptions.abort("symbolic links are unavailable");
         }
-        Files.writeString(directory.resolve("AGENTS.md"), "must not load");
+        var dangling = load(directory, new ProjectContextConfig(true, null, directory,
+                ProjectContextFailureMode.FAIL), 2);
+        assertEquals(List.of("fallback"), contents(dangling));
+        assertTrue(hasCode(dangling, ProjectContextDiagnostic.Code.SOURCE_UNREADABLE));
+    }
 
-        var snapshot = load(directory, new ProjectContextConfig(true, null, directory,
-                ProjectContextFailureMode.WARN_AND_SKIP), 1);
+    @Test
+    void strictModeFailsOnlyWhenNoCandidateCanBeLoadedAndRetainsCause() throws Exception {
+        Files.write(directory.resolve("AGENTS.override.md"), new byte[]{(byte) 0xc3, 0x28});
 
-        assertTrue(snapshot.files().isEmpty());
-        assertTrue(hasCode(snapshot, ProjectContextDiagnostic.Code.SOURCE_IDENTITY_FAILED));
+        var failure = assertThrows(ProjectContextLoadException.class, () -> load(directory,
+                new ProjectContextConfig(true, null, directory, ProjectContextFailureMode.FAIL), 1));
+
+        assertEquals(ProjectContextDiagnostic.Code.INVALID_UTF8, failure.diagnostics().getLast().code());
+        assertInstanceOf(CharacterCodingException.class, failure.getCause());
+    }
+
+    @Test
+    void missingOptionalGlobalDirectoryIsAnEmptySource() throws Exception {
+        Files.writeString(directory.resolve("AGENTS.md"), "project rules");
+        var missingGlobal = directory.resolve("not-created");
+
+        var snapshot = load(directory, new ProjectContextConfig(true, missingGlobal, directory,
+                ProjectContextFailureMode.FAIL), 1);
+
+        assertEquals(List.of("project rules"), contents(snapshot));
+        assertTrue(snapshot.diagnostics().isEmpty());
     }
 
     @Test
@@ -108,77 +133,82 @@ class ProjectContextLoaderTest {
     }
 
     @Test
-    void enforcesStrictUtf8AndFileAndAggregateBudgets() throws Exception {
-        Files.write(directory.resolve("AGENTS.md"), new byte[ProjectContextLoader.MAX_FILE_BYTES + 1]);
-        var warning = load(directory, new ProjectContextConfig(true, null, directory,
-                ProjectContextFailureMode.WARN_AND_SKIP), 1);
-        assertTrue(warning.files().isEmpty());
-        assertTrue(hasCode(warning, ProjectContextDiagnostic.Code.SOURCE_TOO_LARGE));
+    void enforcesOnlyTheAggregateActualReadLimit() throws Exception {
+        var child = Files.createDirectory(directory.resolve("child"));
+        Files.writeString(directory.resolve("AGENTS.md"), "a".repeat(600 * 1024));
+        Files.writeString(child.resolve("AGENTS.md"), "b".repeat(500 * 1024));
 
-        var level = directory;
-        Files.delete(level.resolve("AGENTS.md"));
-        byte[] validText = "a".repeat(60 * 1024).getBytes(StandardCharsets.UTF_8);
-        for (int index = 0; index < 5; index++) {
-            level = Files.createDirectory(level.resolve("d" + index));
-            Files.write(level.resolve("AGENTS.md"), validText);
-        }
-        Path cwd = level;
-        var failure = assertThrows(ProjectContextLoadException.class, () -> load(cwd,
-                new ProjectContextConfig(true, null, directory, ProjectContextFailureMode.WARN_AND_SKIP), 2));
+        var failure = assertThrows(ProjectContextLoadException.class, () -> load(child,
+                new ProjectContextConfig(true, null, directory, ProjectContextFailureMode.WARN_AND_SKIP), 1));
+
         assertEquals(ProjectContextDiagnostic.Code.LOAD_LIMIT_EXCEEDED,
                 failure.diagnostics().getLast().code());
     }
 
     @Test
-    void reportsCooperativeDeadlineAsStructuredLoadFailure() {
-        var calls = new int[1];
-        var config = new ProjectContextConfig(true, null, directory, ProjectContextFailureMode.WARN_AND_SKIP);
+    void followsConfiguredPathAncestorsInsteadOfPhysicalAncestors() throws Exception {
+        var physical = Files.createDirectories(directory.resolve("physical/repository/child"));
+        var logical = Files.createDirectory(directory.resolve("logical"));
+        try {
+            Files.createSymbolicLink(logical.resolve("project"), physical.getParent());
+        } catch (UnsupportedOperationException | IOException e) {
+            Assumptions.abort("symbolic links are unavailable");
+        }
+        Files.writeString(logical.resolve("AGENTS.md"), "logical rules");
+        Files.writeString(directory.resolve("physical/AGENTS.md"), "physical rules");
 
-        var failure = assertThrows(ProjectContextLoadException.class, () -> ProjectContextLoader.load(
-                directory, config, 1, new CancellationSource().signal(),
-                () -> calls[0]++ == 0 ? 0 : 5_000_000_000L));
+        var snapshot = load(logical.resolve("project/child"),
+                new ProjectContextConfig(true, null, logical, ProjectContextFailureMode.FAIL), 1);
 
-        assertEquals(ProjectContextDiagnostic.Code.LOAD_DEADLINE_EXCEEDED,
-                failure.diagnostics().getLast().code());
+        assertEquals(List.of("logical rules"), contents(snapshot));
     }
 
     @Test
-    void nestedLinkedWorktreeShadowsOnlyMainRepositoryRoot() throws Exception {
-        var main = Files.createDirectory(directory.resolve("main"));
-        var commonGit = Files.createDirectories(main.resolve(".git/worktrees/nested"));
-        var nested = Files.createDirectory(main.resolve("nested"));
-        Files.writeString(main.resolve("AGENTS.md"), "main rules");
-        Files.writeString(nested.resolve("AGENTS.override.md"), "worktree rules");
-        Files.writeString(nested.resolve(".git"), "gitdir: " + commonGit + "\n");
-        Files.writeString(commonGit.resolve("commondir"), "../..\n");
-        Files.writeString(commonGit.resolve("gitdir"), nested.resolve(".git") + "\n");
-
-        var snapshot = load(nested, new ProjectContextConfig(true, null, directory,
+    void linkedWorktreeShadowsOnlyTheSameCandidateNameAfterSuccessfulLoad() throws Exception {
+        Worktree sameName = createNestedWorktree("AGENTS.md", "AGENTS.md");
+        var shadowed = load(sameName.root(), new ProjectContextConfig(true, null, sameName.main(),
                 ProjectContextFailureMode.FAIL), 1);
+        assertEquals(List.of("worktree rules"), contents(shadowed));
+        assertTrue(hasCode(shadowed, ProjectContextDiagnostic.Code.SHADOWED_WORKTREE_SOURCE));
 
-        assertEquals(List.of("worktree rules"),
-                snapshot.files().stream().map(ProjectContextFile::content).toList());
-        assertTrue(hasCode(snapshot, ProjectContextDiagnostic.Code.SHADOWED_WORKTREE_SOURCE));
+        var secondRoot = Files.createDirectory(directory.resolve("second"));
+        Worktree differentNames = createNestedWorktree(secondRoot, "AGENTS.md", "AGENTS.override.md");
+        var inherited = load(differentNames.root(), new ProjectContextConfig(true, null, differentNames.main(),
+                ProjectContextFailureMode.FAIL), 2);
+        assertEquals(List.of("main rules", "worktree rules"), contents(inherited));
+        assertFalse(hasCode(inherited, ProjectContextDiagnostic.Code.SHADOWED_WORKTREE_SOURCE));
     }
 
     @Test
-    void ordinaryNestedRepositoryDoesNotShadowAncestorInstructions() throws Exception {
-        var outer = Files.createDirectory(directory.resolve("outer"));
-        var nested = Files.createDirectory(outer.resolve("nested"));
-        Files.createDirectory(nested.resolve(".git"));
-        Files.writeString(outer.resolve("AGENTS.md"), "outer rules");
+    void malformedWorktreeMetadataNeverBlocksNormalDiscovery() throws Exception {
+        var nested = Files.createDirectories(directory.resolve("main/nested"));
+        Files.createDirectory(directory.resolve("main/.git"));
+        Files.writeString(directory.resolve("main/AGENTS.md"), "main rules");
         Files.writeString(nested.resolve("AGENTS.md"), "nested rules");
+        Files.writeString(nested.resolve(".git"), "not git metadata");
 
-        var snapshot = load(nested, new ProjectContextConfig(true, null, directory,
+        var snapshot = load(nested, new ProjectContextConfig(true, null, directory.resolve("main"),
                 ProjectContextFailureMode.FAIL), 1);
 
-        assertEquals(List.of("outer rules", "nested rules"),
-                snapshot.files().stream().map(ProjectContextFile::content).toList());
-        assertFalse(hasCode(snapshot, ProjectContextDiagnostic.Code.SHADOWED_WORKTREE_SOURCE));
+        assertEquals(List.of("main rules", "nested rules"), contents(snapshot));
+        assertTrue(hasCode(snapshot, ProjectContextDiagnostic.Code.GIT_METADATA_INVALID));
     }
 
     @Test
-    void rejectsDiscoveryRootOutsidePhysicalWorkingDirectory() throws Exception {
+    void gitMetadataCannotTurnAnAcceptedSourceAtTheReadLimitIntoFailure() throws Exception {
+        String instructions = "a".repeat(ProjectContextLoader.MAX_READ_BYTES);
+        Files.writeString(directory.resolve("AGENTS.md"), instructions);
+        Files.writeString(directory.resolve(".git"), "malformed metadata");
+
+        var snapshot = load(directory, new ProjectContextConfig(true, null, directory,
+                ProjectContextFailureMode.FAIL), 1);
+
+        assertEquals(List.of(instructions), contents(snapshot));
+        assertTrue(hasCode(snapshot, ProjectContextDiagnostic.Code.GIT_METADATA_INVALID));
+    }
+
+    @Test
+    void rejectsDiscoveryRootOutsideConfiguredWorkingDirectory() throws Exception {
         var cwd = Files.createDirectory(directory.resolve("cwd"));
         var unrelated = Files.createDirectory(directory.resolve("unrelated"));
         var failure = assertThrows(ProjectContextLoadException.class, () -> load(cwd,
@@ -187,11 +217,34 @@ class ProjectContextLoaderTest {
                 failure.diagnostics().getLast().code());
     }
 
+    private Worktree createNestedWorktree(String mainName, String worktreeName) throws Exception {
+        return createNestedWorktree(directory, mainName, worktreeName);
+    }
+
+    private Worktree createNestedWorktree(Path parent, String mainName, String worktreeName) throws Exception {
+        var main = Files.createDirectory(parent.resolve("main"));
+        var gitDirectory = Files.createDirectories(main.resolve(".git/worktrees/nested"));
+        var nested = Files.createDirectory(main.resolve("nested"));
+        Files.writeString(main.resolve(mainName), "main rules");
+        Files.writeString(nested.resolve(worktreeName), "worktree rules");
+        Files.writeString(nested.resolve(".git"), "gitdir: " + gitDirectory + "\n");
+        Files.writeString(gitDirectory.resolve("HEAD"), "ref: refs/heads/topic\n");
+        Files.writeString(gitDirectory.resolve("commondir"), "../..\n");
+        return new Worktree(main, nested);
+    }
+
     private ProjectContextSnapshot load(Path cwd, ProjectContextConfig config, long revision) {
         return ProjectContextLoader.load(cwd, config, revision, new CancellationSource().signal());
     }
 
+    private List<String> contents(ProjectContextSnapshot snapshot) {
+        return snapshot.files().stream().map(ProjectContextFile::content).toList();
+    }
+
     private boolean hasCode(ProjectContextSnapshot snapshot, ProjectContextDiagnostic.Code code) {
         return snapshot.diagnostics().stream().anyMatch(diagnostic -> diagnostic.code() == code);
+    }
+
+    private record Worktree(Path main, Path root) {
     }
 }
